--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,12 @@
+/* user show page styles */
+.user-show-avatar {
+    height: 128px;
+    width: 128px;
+}
+
+
+
+
 .job-title-icon {
     width: 30px;
     height: 30px;
@@ -26,3 +35,14 @@
     background-color: #5bc0de;
     border-color: #46b8da;
 }
+
+
+/* user index page files */
+.user-index-avatar {
+    border-radius: 50%;
+}
+
+.well.white-bg {
+    background-color: white;
+}
+
