--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,31 @@
+
+
 <div class="jumbotron text-center">
     <h1>Welcome to Dev Match</h1>
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 <div class="row">
+    <% if user_signed_in? %>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Your Profile</h2>
+                <% if current_user.profile %>
+                    <%= link_to "Edit Profile", edit_user_profile_path(current_user), class: "btn btn-default btn-lg btn-block" %>
+                    <%= link_to "View Your Profile", user_path(current_user), class: "btn btn-default btn-lg btn-block" %>
+                <% else %>
+                    <p>Create your profile so that you can share your information with the community.</p>
+                    <%= link_to "create your profile", new_user_profile_path(current_user), class: "btn btn-default btn-lg btn-block" %>
+                <% end %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">The Community</h2>
+                <p>Visit the community to connect with other entrepreneurs, developers and investors</p>
+                <%= link_to "Visit the Community", users_path, class: "btn btn-default btn-lg btn-block" %>
+            </div>
+        </div>
+    <% else %>
     <div class="col-md-6">
        <div class="well">
            <h2 class="text-center">Basic Membership</h2>
@@ -17,6 +40,6 @@
             <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
             <%= link_to "Be sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: "btn btn-success btn-lg btn-block" %>
         </div>
-        
     </div>
+    <% end %>
 </div>
